tests/script_runtime_errors/subslice_end_lt_start/error.txt
Error: 
    2 | event[1:k]
      |         ^ Conflicting types, got integer but expected positive integer
